Add unit tests for Movie Search and Seat Selection features - Add MoviesPage.test.jsx for movie search functionality - Add SearchResultsPage.test.jsx for search results display - Add performance load tests for search and seat map - Update vite.config.js with test configuration